[gd_scene load_steps=11 format=2]

[ext_resource path="res://costume2 (3).png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/Heatlh bar.gd" type="Script" id=3]
[ext_resource path="res://Player/Camera2D.gd" type="Script" id=7]
[ext_resource path="res://Player/Gun_body.gd" type="Script" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "slide",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "wallslide",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 123.5, 158.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 132.2, 160.183 )

[sub_resource type="QuadMesh" id=5]

[sub_resource type="QuadMesh" id=7]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -6.5, -2.5 )
shape = SubResource( 6 )

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="Camera2D" type="Camera2D" parent="."]
current = true
script = ExtResource( 7 )

[node name="Collision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision"]
position = Vector2( -1.78189, -2 )
scale = Vector2( 1.0304, 1.04256 )
shape = SubResource( 3 )

[node name="Gun_body" type="KinematicBody2D" parent="."]
script = ExtResource( 8 )

[node name="Gun_mesh" type="MeshInstance2D" parent="Gun_body"]
position = Vector2( 237, 1 )
rotation = 0.0174533
scale = Vector2( 300, 50 )
mesh = SubResource( 5 )

[node name="Heatlh bar" type="MeshInstance2D" parent="."]
position = Vector2( 0, -233.25 )
scale = Vector2( 100, 30 )
mesh = SubResource( 7 )
script = ExtResource( 3 )

[connection signal="timeout" from="CoyoteTimer" to="." method="_on_CoyoteTimer_timeout"]
